# JudicialAnalytics

./: .env.example  .gitignore  README.md  judicial_analytics_platform.md  pyproject.toml
.github/workflows/: pipeline.yml
dashboard/: Evolução_Mensal_por_Classe.sql  Inatividade_por_Tribunal.sql  KPI.sql  Movimentos_por_Dia_da_Semana.sql  Movimentos_por_Dia_do_Ano.sql  Movimentos_por_Mês.sql  Percentil_de_Tempo.sql  Processos_Dominantes_por_Classe.sql  Processos_Paradados_por_mais_de_1_ano.sql  Processos_e_Movimentos_por_Semana.sql  Processos_por_Classe.sql  README.md  Taxa_Congestionamento_por_Tribunal.sql  Tempo_Médio_por_Trimestre.sql  Volumen_por_Classe.sql
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: dim_assuntos.sql  dim_calendario.sql  dim_classes.sql  dim_orgaos.sql  dim_tribunais.sql  fato_movimentos.sql  schema.yml
ingestion/: core_ingestion.py  datajud_client.py  db.py  ingest_bronze.py  trigger_databricks_job.py
ingestion/test/: fetch_datajud.py
notebooks/: bronze_databricks.ipynb  bronze_ingest.py  data_quality_checks_silver.ipynb  gold_dlt.ipynb  load_bronze.ipynb  setup_environment.ipynb  silver_databricks.ipynb
