[project]
name = "juducialanalytics"
version = "0.1.0"
description = "Plataforma de análise de dados judiciais"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]
