[project]
name = "judicial-analytics"
version = "0.1.0"
description = "Plataforma de análise de dados judiciais — DataJud + CNJ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # ingestão
    "requests>=2.32",
    "python-dotenv>=1.0",
    # modelagem
    "dbt-duckdb>=1.9",
    # dashboard
    "streamlit>=1.40",
    "duckdb>=1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "dashboard*"]
